# smart-thermostat-skill

./: .env.example  .gitignore  README.md  pyproject.toml  test_conversations.sh
.github/workflows/: rasa-pro.yaml
actions/: __init__.py  action_check_heating_system.py
argocd/rasa-pro/: .argocd.yaml  values.yaml
configs/: config.yml
data/flows/: check_heating.yml
docs/faq/: thermostat.txt
docs/hive_faq/: door_window_sensors.txt  energy_saving.txt  hive_hub.txt  hot_water.txt  motion_sensors.txt  scheduling_and_automation.txt  smart_lights.txt  smart_plugs.txt
domain/: chitchat.yml  domain.yml  shared.yml
prompt_templates/: response-rephraser-template.jinja2
tests/: test_heating_check.yml  test_multi_turn.yml  test_out_of_scope.yml  test_user_emotions.yml
